<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Home">
    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/month_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="October"
        android:layout_gravity="end"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="10dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        app:icon="@drawable/caret_icon"
        app:strokeColor="@color/white"
        app:iconTint="@color/white"
        app:iconGravity="end"
        />
    <TextView
        android:id="@+id/current_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/off_yellow"
        android:text="@string/cashflow" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="20dp">
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/dotted_background"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="7dp"
                android:src="@drawable/arrow_up_icon"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/current_month_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textFontWeight="500"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/income"
                    android:textColor="@color/off_yellow" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/dotted_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="7dp"
                android:src="@drawable/arrow_down_icon" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/current_month_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textFontWeight="500"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textSize="12sp"
                    android:textColor="@color/off_yellow" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:background="@drawable/home_layout_background"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/transactions"
                android:textSize="32sp"
                android:textColor="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/all"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/lighter_black"
                    android:layout_marginEnd="7dp"
                    style="@style/App.Button.Filter"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None"
                    app:rippleColor="@color/green_light"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/today"
                    android:textColor="@color/white"
                    android:layout_marginEnd="7dp"
                    android:padding="0dp"
                    android:backgroundTint="@color/lighter_black"
                    style="@style/App.Button.Filter"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None"
                    app:rippleColor="@color/green_light"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/sort_by"
                    android:layout_marginEnd="7dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/lighter_black"
                    style="@style/App.Button.Filter"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None"
                    app:rippleColor="@color/green_light"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="0dp"
                    android:text="@string/asc"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/lighter_black"
                    style="@style/App.Button.Filter"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None"
                    app:rippleColor="@color/green_light"
                    />
            </LinearLayout>
            <androidx.core.widget.NestedScrollView
                android:id="@+id/item_container"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fillViewport="true"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/transaction_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>