...

    <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:title="@string/app_name"
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_black"
        android:paddingBottom="86dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation" />
    </androidx.core.widget.NestedScrollView>
...
