...
    <string name="initial_balance">Initial balance</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="to">To</string>
    <string name="add_budget">Add Budget</string>
    <string name="transfer">Transfer</string>
    <string name="add">Add</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="currency">Currency</string>
    <string name="balance">Balance</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="retake">Retake</string>
    <string name="scan">Scan</string>
...
    <string name="shopping">Shopping</string>
    <string name="utilities">Utilities</string>
    <string name="edit"><u>Edit</u></string>
    <string name="food">Food</string>
    <string name="transportation">Transportation</string>
    <string name="education">Education</string>
    <string name="wallet_menu">Wallet Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
